--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -26,7 +26,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
 .callout {
